--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "local": "wrangler dev src/index.ts --local"
+    "local": "wrangler dev src/index.ts --local --port 9090"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.0.0",
@@ -21,7 +21,9 @@
     "wrangler": "2.0.23"
   },
   "dependencies": {
-    "@qpoint/proxy": "^0.1.0",
-    "@qpoint/router": "^0.1.2"
+    "@qpoint/mask-urls": "^0.1.3",
+    "@qpoint/proxy": "file:../..",
+    "@qpoint/rewrite-html": "^0.1.2",
+    "@qpoint/router": "^0.1.12"
   }
 }
