--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "release": "npm publish --access=public"
   },
   "dependencies": {
-    "@qpoint/router": "^0.2.0",
-    "forwarded-parse": "^2.1.2"
+    "@qpoint/router": "^0.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.5.1",
