--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "bundle": "esbuild src/index.ts --outdir=dist --bundle --sourcemap=external --platform=browser --format=esm",
     "release": "npm publish --access=public"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.5.1",
+    "esbuild": "^0.19.11",
     "@types/node": "^17.0.25",
     "typescript": "^4.6.3"
   }
