--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -24,6 +24,6 @@
     "@qpoint/mask-urls": "^0.1.3",
     "@qpoint/proxy": "file:../..",
     "@qpoint/rewrite-html": "^0.1.2",
-    "@qpoint/router": "^0.1.12"
+    "@qpoint/endpoint": "^0.0.1"
   }
 }
