--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "release": "npm publish --access=public"
   },
   "dependencies": {
-    "@qpoint/router": "^0.2.0"
+    "@qpoint/endpoint": "^0.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.5.1",
